--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "react-test",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "react": "^17.0.2",
