--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-test",
+  "name": "random-polaroid",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
